# playground

./: .gitignore  pyproject.toml  setup.cfg
app/: jupyter.ipynb
